vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_or_block_selector_newline_call.vv
import v.embed_file

fn maybe_file() ?embed_file.EmbedFileData {
	return none
}

fn main() {
	maybe_file() or { $embed_file(@FILE) }.to_string
	// Keep the following parenthesized statement separate from the selector above.
	(1)
}
